Atualização de arquivos
atualização de arquivos com implementação de JavaScript.

--- a/projeto-portifólio/css/custom.css
+++ b/projeto-portifólio/css/custom.css
@@ -44,6 +44,11 @@ body{
     display: none;
 }
 
+.navigation li.threeline-icon:hover{
+    color:#f27609;
+    cursor: pointer;
+}
+
 .caminho li a{
     color: #fff;
 }
@@ -240,7 +245,7 @@ body{
 
     .navigation li.threeline-icon{
         display: inline-block;
-    }
+    }   
 
     .capa div{
         display:block;
